<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/tables">
    <menu android:checkableBehavior="single">
        <item
            android:id="@+id/nav_military_district_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/military_district"/>
        <item
            android:id="@+id/nav_dislocation_place_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/dislocation_place"/>
        <item
            android:id="@+id/nav_army_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/army"/>
        <item
            android:id="@+id/nav_community_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/community"/>
        <item
            android:id="@+id/nav_military_unit_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/military_unit"/>
        <item
            android:id="@+id/nav_company_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/company"/>
        <item
            android:id="@+id/nav_platoon_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/platoon"/>
        <item
            android:id="@+id/nav_department_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/department"/>
        <item
            android:id="@+id/nav_rank_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/rank"/>
        <item
            android:id="@+id/nav_military_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/military"/>
        <item
            android:id="@+id/nav_speciality_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/speciality"/>
        <item
            android:id="@+id/nav_equipment_category_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/equipment_category"/>
        <item
            android:id="@+id/nav_equipment_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/equipment"/>
        <item
            android:id="@+id/nav_weaponry_category_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/weaponry_category"/>
        <item
            android:id="@+id/nav_weaponry_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/weaponry"/>
        <item
            android:id="@+id/nav_building_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/building"/>
        <item
            android:id="@+id/nav_subdivision_dislocation_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/subdivision_dislocation"/>
        <item
            android:id="@+id/nav_speciality_accounting_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/speciality_accounting"/>
        <item
            android:id="@+id/nav_equipment_accounting_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/equipment_accounting"/>
        <item
            android:id="@+id/nav_weaponry_accounting_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/weaponry_accounting"/>
    </menu>
    </item>

    <item android:title="@string/query">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_task_1_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_1"/>
            <item
                android:id="@+id/nav_task_2_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_2"/>
            <item
                android:id="@+id/nav_task_3_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_3"/>
            <item
                android:id="@+id/nav_task_4_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_4"/>
            <item
                android:id="@+id/nav_task_5_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_5"/>
            <item
                android:id="@+id/nav_task_6_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_6"/>
            <item
                android:id="@+id/nav_task_7_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_7"/>
            <item
                android:id="@+id/nav_task_8_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_8"/>
            <item
                android:id="@+id/nav_task_9_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_9"/>
            <item
                android:id="@+id/nav_task_10_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_10"/>
            <item
                android:id="@+id/nav_task_11_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_11"/>
            <item
                android:id="@+id/nav_task_12_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_12"/>
            <item
                android:id="@+id/nav_task_13_query"
                android:icon="@drawable/ic_menu_query"
                android:title="@string/task_13"/>
        </menu>
    </item>

</menu>