<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_horizontal_margin"
              tools:context=".view.ui.activities.MainActivity">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_9_title"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_vertical|start"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/input_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/military_district"/>

        <Spinner
            android:id="@+id/input_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/input_2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/army"/>

        <Spinner
            android:id="@+id/input_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/input_3_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/community"/>

        <Spinner
            android:id="@+id/input_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/input_4_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/military_unit"/>

        <Spinner
            android:id="@+id/input_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/input_5_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weaponry_category"/>

        <Spinner
            android:id="@+id/input_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/execute_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/alert_dialog_elevation"
            android:text="@string/execute_button"/>

    </LinearLayout>

</LinearLayout>